Makefile fully functional. README noting known bug with --update on source tar scratch.spec.in fixed bug with Requires now requires squeak-vm not squeak

--- a/scratch.spec.in
+++ b/scratch.spec.in
@@ -10,7 +10,7 @@ Source0:    http://download.scratch.mit.edu/%{name}-%{version}.src.tar.gz
 BuildRoot: %{_tmppath}/%{name}-%{version}.src/
 
 BuildRequires:  libv4l, libv4l-devel, pango, pango-devel   
-Requires:   squeak, pango
+Requires:   squeak-vm, pango
 
 %description
 
